--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "ejs": "^2.5.6",
+    "mongoose": "^5.0.7",
     "express": "^4.15.2"
   },
   "devDependencies": {
