--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "ejs": "^2.5.6",
-    "mongoose": "^5.0.7",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "mongoose": "^5.0.7"
   },
   "devDependencies": {
     "request": "^2.81.0",
